--- a/gpt_dev.ipynb
+++ b/gpt_dev.ipynb
@@ -1077,7 +1077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1092,7 +1092,7 @@
               "torch.Size([32, 100])"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1100,7 +1100,7 @@
       "source": [
         "class LayerNorm1d: # (used to be BatchNorm1d)\n",
         "\n",
-        "  def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
+        "  def __init__(self, dim, eps=1e-5):\n",
         "    self.eps = eps\n",
         "    self.gamma = torch.ones(dim)\n",
         "    self.beta = torch.zeros(dim)\n",
@@ -1108,7 +1108,7 @@
         "  def __call__(self, x):\n",
         "    # calculate the forward pass\n",
         "    xmean = x.mean(1, keepdim=True) # batch mean\n",
-        "    xvar = x.var(1, keepdim=True) # batch variance\n",
+        "    xvar = x.var(1, keepdim=True) # batch variance # change to x.var(0, keepdim=True) and we get batch norm\n",
         "    xhat = (x - xmean) / torch.sqrt(xvar + self.eps) # normalize to unit variance\n",
         "    self.out = self.gamma * xhat + self.beta\n",
         "    return self.out\n",
@@ -1125,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1140,7 +1140,7 @@
               "(tensor(0.1469), tensor(0.8803))"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1151,7 +1151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1166,7 +1166,7 @@
               "(tensor(-9.5367e-09), tensor(1.0000))"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
